--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "method-override": "^3.0.0",
+    "npm": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
