--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "method-override": "^3.0.0",
+    "mongodb": "^6.13.0",
     "npm": "^11.1.0"
   },
   "devDependencies": {
